--- a/U03_Game/Config/DefaultInput.ini
+++ b/U03_Game/Config/DefaultInput.ini
@@ -88,7 +88,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Warp",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Five)
 +ActionMappings=(ActionName="Tornado",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Six)
 +ActionMappings=(ActionName="Action",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
-+ActionMappings=(ActionName="Aim",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
++ActionMappings=(ActionName="Aim",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=RightMouseButton)
 +ActionMappings=(ActionName="Interact",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=F)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=S)
