--- a/U03_Game/Config/DefaultInput.ini
+++ b/U03_Game/Config/DefaultInput.ini
@@ -96,6 +96,7 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="MoveRight",Scale=-1.000000,Key=A)
 +AxisMappings=(AxisName="HorizontalLook",Scale=1.000000,Key=MouseX)
 +AxisMappings=(AxisName="VerticalLook",Scale=-1.000000,Key=MouseY)
++AxisMappings=(AxisName="Zoom",Scale=-1.000000,Key=MouseWheelAxis)
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
 -ConsoleKeys=Tilde
 +ConsoleKeys=Tilde
