--- a/U03_Game/Config/DefaultInput.ini
+++ b/U03_Game/Config/DefaultInput.ini
@@ -90,6 +90,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Action",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
 +ActionMappings=(ActionName="Aim",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=RightMouseButton)
 +ActionMappings=(ActionName="Interact",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=F)
++ActionMappings=(ActionName="SelectAction",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftControl)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="MoveRight",Scale=1.000000,Key=D)
