0329_CascadedShadow_DistanceFeild_POM

--- a/U03_Game/Config/DefaultEngine.ini
+++ b/U03_Game/Config/DefaultEngine.ini
@@ -15,3 +15,6 @@ AppliedDefaultGraphicsPerformance=Maximum
 EditorStartupMap=/Game/Maps/Example.Example
 GlobalDefaultGameMode=/Script/U03_Game.CGameMode
 
+[/Script/Engine.RendererSettings]
+r.GenerateMeshDistanceFields=True
+
