--- a/U03_Game/Config/DefaultEngine.ini
+++ b/U03_Game/Config/DefaultEngine.ini
@@ -17,4 +17,5 @@ GlobalDefaultGameMode=/Script/U03_Game.CGameMode
 
 [/Script/Engine.RendererSettings]
 r.GenerateMeshDistanceFields=True
+r.AllowGlobalClipPlane=True
 
