--- a/U03_Game/Config/DefaultEngine.ini
+++ b/U03_Game/Config/DefaultEngine.ini
@@ -18,4 +18,5 @@ GlobalDefaultGameMode=/Script/U03_Game.CGameMode
 [/Script/Engine.RendererSettings]
 r.GenerateMeshDistanceFields=True
 r.AllowGlobalClipPlane=True
+r.CustomDepth=3
 
