0421_RHI 완료.FileArchive 작성 중

--- a/U03_Game/Config/DefaultInput.ini
+++ b/U03_Game/Config/DefaultInput.ini
@@ -92,6 +92,8 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Interact",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=F)
 +ActionMappings=(ActionName="SelectAction",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftControl)
 +ActionMappings=(ActionName="Scan",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=X)
++ActionMappings=(ActionName="SaveFile",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=NumPadOne)
++ActionMappings=(ActionName="LoadFile",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=NumPadTwo)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="MoveRight",Scale=1.000000,Key=D)
