--- a/U04_MultiPlay/Config/DefaultEngine.ini
+++ b/U04_MultiPlay/Config/DefaultEngine.ini
@@ -1,5 +1,5 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap
+GameDefaultMap=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap.ThirdPersonExampleMap
 EditorStartupMap=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap
 GlobalDefaultGameMode="/Script/U04_MultiPlay.U04_MultiPlayGameMode"
 
