--- a/U04_MultiPlay/U04_MultiPlay.uproject
+++ b/U04_MultiPlay/U04_MultiPlay.uproject
@@ -7,7 +7,10 @@
 		{
 			"Name": "U04_MultiPlay",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"Engine"
+			]
 		}
 	]
 }
