--- a/U04_MultiPlay/Config/DefaultEngine.ini
+++ b/U04_MultiPlay/Config/DefaultEngine.ini
@@ -1,5 +1,5 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/ThirdPersonCPP/Maps/Lobby.Lobby
+GameDefaultMap=/Game/ThirdPersonCPP/Maps/MainMenu.MainMenu
 EditorStartupMap=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap
 GlobalDefaultGameMode="/Script/U04_MultiPlay.U04_MultiPlayGameMode"
 GameInstanceClass=/Script/U04_MultiPlay.CGameInstance
