--- a/U04_MultiPlay/Config/DefaultEngine.ini
+++ b/U04_MultiPlay/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/ThirdPersonCPP/Maps/MainMenu.MainMenu
-EditorStartupMap=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap
+EditorStartupMap=/Game/ThirdPersonCPP/Maps/MainMenu.MainMenu
 GlobalDefaultGameMode="/Script/U04_MultiPlay.U04_MultiPlayGameMode"
 GameInstanceClass=/Script/U04_MultiPlay.CGameInstance
 
