--- a/U04_MultiPlay/Config/DefaultEngine.ini
+++ b/U04_MultiPlay/Config/DefaultEngine.ini
@@ -19,3 +19,6 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveClassRedirects=(OldClassName="TP_ThirdPersonGameMode",NewClassName="U04_MultiPlayGameMode")
 +ActiveClassRedirects=(OldClassName="TP_ThirdPersonCharacter",NewClassName="U04_MultiPlayCharacter")
 
+[OnlineSubsystem]
+DefaultPlatformService=NULL
+
