--- a/U04_MultiPlay/Config/DefaultEngine.ini
+++ b/U04_MultiPlay/Config/DefaultEngine.ini
@@ -19,6 +19,15 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveClassRedirects=(OldClassName="TP_ThirdPersonGameMode",NewClassName="U04_MultiPlayGameMode")
 +ActiveClassRedirects=(OldClassName="TP_ThirdPersonCharacter",NewClassName="U04_MultiPlayCharacter")
 
-[OnlineSubsystem]
-DefaultPlatformService=NULL
+[/Script/Engine.GameEngine]
++NetDriverDefinitions=(DefName="GameNetDriver",DriverClassName="OnlineSubsystemSteam.SteamNetDriver",DriverClassNameFallback="OnlineSubsystemUtils.IpNetDriver")
 
+[OnlineSubsystem]
+DefaultPlatformService=Steam
+
+[OnlineSubsystemSteam]
+bEnabled=true
+SteamDevAppId=480
+
+[/Script/OnlineSubsystemSteam.SteamNetDriver]
+NetConnectionClassName="OnlineSubsystemSteam.SteamNetConnection"
