--- a/U04_MultiPlay/Config/DefaultEngine.ini
+++ b/U04_MultiPlay/Config/DefaultEngine.ini
@@ -3,6 +3,7 @@ GameDefaultMap=/Game/ThirdPersonCPP/Maps/MainMenu.MainMenu
 EditorStartupMap=/Game/ThirdPersonCPP/Maps/MainMenu.MainMenu
 GlobalDefaultGameMode="/Script/U04_MultiPlay.U04_MultiPlayGameMode"
 GameInstanceClass=/Script/U04_MultiPlay.CGameInstance
+TransitionMap=/Game/ThirdPersonCPP/Maps/Transition.Transition
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 MinimumiOSVersion=IOS_11
@@ -31,3 +32,4 @@ SteamDevAppId=480
 
 [/Script/OnlineSubsystemSteam.SteamNetDriver]
 NetConnectionClassName="OnlineSubsystemSteam.SteamNetConnection"
+
