--- a/U05_Synchronization/U05_Synchronization.uproject
+++ b/U05_Synchronization/U05_Synchronization.uproject
@@ -7,7 +7,10 @@
 		{
 			"Name": "U05_Synchronization",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"Engine"
+			]
 		}
 	],
 	"Plugins": [
