--- a/U07_DataStructure/05_Queue/05_Queue/05_Queue.vcxproj
+++ b/U07_DataStructure/05_Queue/05_Queue/05_Queue.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{7840d1cf-5f3b-4026-8571-01e4c3db5339}</ProjectGuid>
-    <RootNamespace>List</RootNamespace>
+    <ProjectGuid>{1c4e0c7d-3365-44d6-b6c2-42979ab1ceff}</ProjectGuid>
+    <RootNamespace>My05Queue</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -139,10 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="BytePadding.cpp">
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
-    </ClCompile>
-    <ClCompile Include="List.cpp" />
+    <ClInclude Include="Queue.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
