--- a/U07_DataStructure/05_Queue/05_Queue/05_Queue.vcxproj.filters
+++ b/U07_DataStructure/05_Queue/05_Queue/05_Queue.vcxproj.filters
@@ -3,4 +3,7 @@
   <ItemGroup>
     <ClInclude Include="Queue.h" />
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="Queue.cpp" />
+  </ItemGroup>
 </Project>
