--- a/U07_DataStructure/09_QuickSort/09_BinarySearch/09_BinarySearch.vcxproj
+++ b/U07_DataStructure/09_QuickSort/09_BinarySearch/09_BinarySearch.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{9f6baef7-1f40-469d-888f-450bfbf0b0e4}</ProjectGuid>
-    <RootNamespace>My09QuickSort</RootNamespace>
+    <ProjectGuid>{dcb1da8a-d657-47f0-856d-2a9d32295f28}</ProjectGuid>
+    <RootNamespace>My09BinarySearch</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -139,10 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="QuickSort.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="Timer.h" />
+    <ClCompile Include="BinarySearch.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
