--- a/U07_DataStructure/11_Heap/11_Heap/11_Heap.vcxproj
+++ b/U07_DataStructure/11_Heap/11_Heap/11_Heap.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{a0d9d6a7-46b7-449f-8bb2-734363887f40}</ProjectGuid>
-    <RootNamespace>My10BinarySearchTree</RootNamespace>
+    <ProjectGuid>{4ac0025f-6483-418c-a088-80d36f127566}</ProjectGuid>
+    <RootNamespace>My11Heap</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -139,10 +139,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="BinarySearchTree.h" />
+    <ClInclude Include="Heap.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="BinarySearchTree.cpp" />
+    <ClCompile Include="Heap.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
