--- a/U07_DataStructure/12_PriorityQueue/12_PriorityQueue/12_PriorityQueue.vcxproj
+++ b/U07_DataStructure/12_PriorityQueue/12_PriorityQueue/12_PriorityQueue.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{a0d9d6a7-46b7-449f-8bb2-734363887f40}</ProjectGuid>
-    <RootNamespace>My10BinarySearchTree</RootNamespace>
+    <ProjectGuid>{83918242-9e8e-4355-b498-b520cc199446}</ProjectGuid>
+    <RootNamespace>My12PriorityQueue</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -139,10 +139,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="BinarySearchTree.h" />
+    <ClInclude Include="PQueue.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="BinarySearchTree.cpp" />
+    <ClCompile Include="PQueue.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
