--- a/U07_DataStructure/12_PriorityQueue/12_PriorityQueue/12_PriorityQueue.vcxproj.filters
+++ b/U07_DataStructure/12_PriorityQueue/12_PriorityQueue/12_PriorityQueue.vcxproj.filters
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClInclude Include="BinarySearchTree.h" />
+    <ClInclude Include="PQueue.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="BinarySearchTree.cpp" />
+    <ClCompile Include="PQueue.cpp" />
   </ItemGroup>
 </Project>
