--- a/U07_DataStructure/13_Set/13_Set/13_Set.vcxproj.filters
+++ b/U07_DataStructure/13_Set/13_Set/13_Set.vcxproj.filters
@@ -1,9 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClInclude Include="BinarySearchTree.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="BinarySearchTree.cpp" />
+    <ClCompile Include="Main.cpp" />
   </ItemGroup>
 </Project>
