--- a/U07_DataStructure/15_Graph/15_Graph/15_Graph.vcxproj.filters
+++ b/U07_DataStructure/15_Graph/15_Graph/15_Graph.vcxproj.filters
@@ -1,9 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClInclude Include="RBTree.h" />
+    <ClInclude Include="Graph.h" />
+    <ClInclude Include="Queue.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="RBTree.cpp" />
+    <ClCompile Include="Graph.cpp" />
   </ItemGroup>
 </Project>
