--- a/U07_DataStructure/17_MST/17_MST/17_MST.vcxproj
+++ b/U07_DataStructure/17_MST/17_MST/17_MST.vcxproj
@@ -139,6 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="DisjointSet.h" />
     <ClInclude Include="Graph.h" />
     <ClInclude Include="PQueue.h" />
   </ItemGroup>
