--- a/U07_DataStructure/19_OpenAddress/19_OpenAddress/19_OpenAddress.vcxproj
+++ b/U07_DataStructure/19_OpenAddress/19_OpenAddress/19_OpenAddress.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{1ff5d9be-4ffb-4cc2-b338-444071e6a31b}</ProjectGuid>
-    <RootNamespace>My18Chaning</RootNamespace>
+    <ProjectGuid>{4b429b30-6136-419e-bf21-696354108a91}</ProjectGuid>
+    <RootNamespace>My19OpenAddress</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -85,9 +85,9 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
-      <SDLCheck>true</SDLCheck>
+      <SDLCheck>false</SDLCheck>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <ConformanceMode>true</ConformanceMode>
+      <ConformanceMode>false</ConformanceMode>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -139,10 +139,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Hash.cpp" />
+    <ClInclude Include="OpenAddress.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Chaining.h" />
+    <ClCompile Include="OpenAddress.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
