--- a/U07_DataStructure/21_DynamicPlanning/21_DynamicPlanning/21_DynamicPlanning.vcxproj.filters
+++ b/U07_DataStructure/21_DynamicPlanning/21_DynamicPlanning/21_DynamicPlanning.vcxproj.filters
@@ -7,5 +7,6 @@
   <ItemGroup>
     <ClCompile Include="Fibonacci_DynamicPlanning.cpp" />
     <ClCompile Include="LCS.cpp" />
+    <ClCompile Include="LCS_DynamicPlanning.cpp" />
   </ItemGroup>
 </Project>
