--- a/D3D/UnitTest/UnitTest.vcxproj
+++ b/D3D/UnitTest/UnitTest.vcxproj
@@ -132,10 +132,16 @@
   <ItemGroup>
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="stdafx.cpp" />
+    <ClCompile Include="VertexLine2Demo.cpp" />
+    <ClCompile Include="VertexLineColorDemo.cpp" />
+    <ClCompile Include="VertexLineDemo.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Main.h" />
     <ClInclude Include="stdafx.h" />
+    <ClInclude Include="VertexLine2Demo.h" />
+    <ClInclude Include="VertexLineColorDemo.h" />
+    <ClInclude Include="VertexLineDemo.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
