--- a/D3D/UnitTest/UnitTest.vcxproj.filters
+++ b/D3D/UnitTest/UnitTest.vcxproj.filters
@@ -3,9 +3,15 @@
   <ItemGroup>
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="stdafx.cpp" />
+    <ClCompile Include="VertexLineDemo.cpp" />
+    <ClCompile Include="VertexLineColorDemo.cpp" />
+    <ClCompile Include="VertexLine2Demo.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Main.h" />
     <ClInclude Include="stdafx.h" />
+    <ClInclude Include="VertexLineDemo.h" />
+    <ClInclude Include="VertexLineColorDemo.h" />
+    <ClInclude Include="VertexLine2Demo.h" />
   </ItemGroup>
 </Project>
