--- a/D3D/UnitTest/UnitTest.vcxproj
+++ b/D3D/UnitTest/UnitTest.vcxproj
@@ -132,6 +132,7 @@
   <ItemGroup>
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="stdafx.cpp" />
+    <ClCompile Include="TriangleDemo.cpp" />
     <ClCompile Include="VertexLine2Demo.cpp" />
     <ClCompile Include="VertexLineColorDemo.cpp" />
     <ClCompile Include="VertexLineDemo.cpp" />
@@ -139,6 +140,7 @@
   <ItemGroup>
     <ClInclude Include="Main.h" />
     <ClInclude Include="stdafx.h" />
+    <ClInclude Include="TriangleDemo.h" />
     <ClInclude Include="VertexLine2Demo.h" />
     <ClInclude Include="VertexLineColorDemo.h" />
     <ClInclude Include="VertexLineDemo.h" />
