--- a/D3D/UnitTest/UnitTest.vcxproj
+++ b/D3D/UnitTest/UnitTest.vcxproj
@@ -130,20 +130,30 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="GridDemo.cpp" />
+    <ClCompile Include="IndexBufferDemo.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="MultiWorldDemo.cpp" />
+    <ClCompile Include="RectDemo.cpp" />
     <ClCompile Include="stdafx.cpp" />
     <ClCompile Include="TriangleDemo.cpp" />
     <ClCompile Include="VertexLine2Demo.cpp" />
     <ClCompile Include="VertexLineColorDemo.cpp" />
     <ClCompile Include="VertexLineDemo.cpp" />
+    <ClCompile Include="WorldDemo.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="GridDemo.h" />
+    <ClInclude Include="IndexBufferDemo.h" />
     <ClInclude Include="Main.h" />
+    <ClInclude Include="MultiWorldDemo.h" />
+    <ClInclude Include="RectDemo.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="TriangleDemo.h" />
     <ClInclude Include="VertexLine2Demo.h" />
     <ClInclude Include="VertexLineColorDemo.h" />
     <ClInclude Include="VertexLineDemo.h" />
+    <ClInclude Include="WorldDemo.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
