--- a/D3D/UnitTest/UnitTest.vcxproj
+++ b/D3D/UnitTest/UnitTest.vcxproj
@@ -137,6 +137,7 @@
     <ClCompile Include="MultiWorldDemo.cpp" />
     <ClCompile Include="RectDemo.cpp" />
     <ClCompile Include="stdafx.cpp" />
+    <ClCompile Include="TerrainDemo.cpp" />
     <ClCompile Include="TextureDemo.cpp" />
     <ClCompile Include="TextureSamplerDemo.cpp" />
     <ClCompile Include="TriangleDemo.cpp" />
@@ -153,6 +154,7 @@
     <ClInclude Include="MultiWorldDemo.h" />
     <ClInclude Include="RectDemo.h" />
     <ClInclude Include="stdafx.h" />
+    <ClInclude Include="TerrainDemo.h" />
     <ClInclude Include="TextureDemo.h" />
     <ClInclude Include="TextureSamplerDemo.h" />
     <ClInclude Include="TriangleDemo.h" />
