--- a/D3D/UnitTest/UnitTest.vcxproj.filters
+++ b/D3D/UnitTest/UnitTest.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="TextureSamplerDemo.cpp">
       <Filter>Texture</Filter>
     </ClCompile>
+    <ClCompile Include="TerrainDemo.cpp">
+      <Filter>Terrain</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Main.h" />
@@ -79,6 +82,9 @@
     <ClInclude Include="TextureSamplerDemo.h">
       <Filter>Texture</Filter>
     </ClInclude>
+    <ClInclude Include="TerrainDemo.h">
+      <Filter>Terrain</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Vertex">
@@ -92,6 +98,9 @@
     </Filter>
     <Filter Include="Texture">
       <UniqueIdentifier>{2e47d1ff-120b-40df-be8f-15097cff1a10}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Terrain">
+      <UniqueIdentifier>{00fb877a-806e-4d4c-8b9b-a5fc036b6dee}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
