--- a/D3D/UnitTest/UnitTest.vcxproj.filters
+++ b/D3D/UnitTest/UnitTest.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClCompile Include="MeshDemo.cpp">
       <Filter>Mesh</Filter>
     </ClCompile>
+    <ClCompile Include="CubeMapDemo.cpp">
+      <Filter>Mesh</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Main.h" />
@@ -95,6 +98,9 @@
       <Filter>Terrain</Filter>
     </ClInclude>
     <ClInclude Include="MeshDemo.h">
+      <Filter>Mesh</Filter>
+    </ClInclude>
+    <ClInclude Include="CubeMapDemo.h">
       <Filter>Mesh</Filter>
     </ClInclude>
   </ItemGroup>
