--- a/D3D/Framework/Framework.vcxproj.filters
+++ b/D3D/Framework/Framework.vcxproj.filters
@@ -10,9 +10,6 @@
     <ClInclude Include="Renders\Texture.h">
       <Filter>Renders</Filter>
     </ClInclude>
-    <ClInclude Include="Renders\VertexLayouts.h">
-      <Filter>Renders</Filter>
-    </ClInclude>
     <ClInclude Include="Systems\D3D.h">
       <Filter>Systems</Filter>
     </ClInclude>
@@ -99,6 +96,9 @@
       <Filter>Environment</Filter>
     </ClInclude>
     <ClInclude Include="Renders\Buffers.h">
+      <Filter>Renders</Filter>
+    </ClInclude>
+    <ClInclude Include="Renders\Transform.h">
       <Filter>Renders</Filter>
     </ClInclude>
   </ItemGroup>
@@ -195,6 +195,9 @@
       <Filter>Environment</Filter>
     </ClCompile>
     <ClCompile Include="Renders\Buffers.cpp">
+      <Filter>Renders</Filter>
+    </ClCompile>
+    <ClCompile Include="Renders\Transform.cpp">
       <Filter>Renders</Filter>
     </ClCompile>
   </ItemGroup>
