--- a/D3D/ModelEditor/ModelEditor.vcxproj
+++ b/D3D/ModelEditor/ModelEditor.vcxproj
@@ -140,6 +140,7 @@
     <ClInclude Include="ExportFile.h" />
     <ClInclude Include="Main.h" />
     <ClInclude Include="stdafx.h" />
+    <ClInclude Include="Types.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
