--- a/D3D/Framework/Framework.vcxproj.filters
+++ b/D3D/Framework/Framework.vcxproj.filters
@@ -116,6 +116,9 @@
     <ClInclude Include="Model\ModelRender.h">
       <Filter>Model</Filter>
     </ClInclude>
+    <ClInclude Include="Renders\Material.h">
+      <Filter>Renders</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Renders\Context.cpp">
@@ -229,6 +232,9 @@
     </ClCompile>
     <ClCompile Include="Model\ModelRender.cpp">
       <Filter>Model</Filter>
+    </ClCompile>
+    <ClCompile Include="Renders\Material.cpp">
+      <Filter>Renders</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
